maven build  bug fix  & implement some entities in inventory

--- a/Backend/cart-service/cart-service-dao/pom.xml
+++ b/Backend/cart-service/cart-service-dao/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>order-service</artifactId>
+        <artifactId>cart-service</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <packaging>jar</packaging>
-    <artifactId>order-service-dao</artifactId>
+    <artifactId>cart-service-dao</artifactId>
 
     <properties>
 
