--- a/Backend/inventory-service/inventory-service-dao/src/main/resources/application-prod.properties
+++ b/Backend/inventory-service/inventory-service-dao/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/shopco
 spring.datasource.username= postgres
 spring.datasource.password=  root
-spring.datasource.hikari.schema=order_service
+spring.datasource.hikari.schema=inventory_service
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA properties
