--- a/Backend/auth-service/pom.xml
+++ b/Backend/auth-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.shopco.backend</groupId>
-		<artifactId>shopco-ecommerce</artifactId>
+		<artifactId>backend</artifactId>
 		<version>1.0.0</version>
 	</parent>
 
@@ -77,12 +77,12 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.itgura.lms</groupId>
+			<groupId>com.shopco.backend</groupId>
 			<artifactId>lib-common</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.itgura.lms</groupId>
+			<groupId>com.shopco.backend</groupId>
 			<artifactId>lib-global</artifactId>
 			<version>0.0.1</version>
 		</dependency>
@@ -90,7 +90,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-<!--		<dependency>-->
+		<dependency>
+			<groupId>com.shopco.backend</groupId>
+			<artifactId>lib-common</artifactId>
+			<version>0.0.1</version>
+			<scope>compile</scope>
+		</dependency>
+		<!--		<dependency>-->
 <!--			<groupId>org.springframework.cloud</groupId>-->
 <!--			<artifactId>spring-cloud-starter-kubernetes</artifactId>-->
 <!--			<version>1.1.10.RELEASE</version>-->
