--- a/Backend/cart-service/cart-service-all/pom.xml
+++ b/Backend/cart-service/cart-service-all/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>order-service</artifactId>
+        <artifactId>cart-service</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <packaging>jar</packaging>
-    <artifactId>order-service-all</artifactId>
+    <artifactId>cart-service-all</artifactId>
     <profiles>
         <profile>
             <id>build-docker-image</id>
