--- a/Backend/cart-service/cart-service-service/pom.xml
+++ b/Backend/cart-service/cart-service-service/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>order-service</artifactId>
+        <artifactId>cart-service</artifactId>
         <version>1.0.0</version>
     </parent>
     <packaging>jar</packaging>
 
-    <artifactId>order-service-service</artifactId>
+    <artifactId>cart-service-service</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.shopco.backend</groupId>
-            <artifactId>inventory-service-dao</artifactId>
+            <artifactId>cart-service-dao</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
