--- a/Backend/inventory-service/inventory-service-all/pom.xml
+++ b/Backend/inventory-service/inventory-service-all/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>order-service</artifactId>
+        <artifactId>inventory-service</artifactId>
         <version>1.0.0</version>
     </parent>
 
