--- a/Backend/lib-common/pom.xml
+++ b/Backend/lib-common/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>shopco-ecommerce</artifactId>
+        <artifactId>backend</artifactId>
         <version>1.0.0</version>
     </parent>
 
