--- a/Backend/lib-global/pom.xml
+++ b/Backend/lib-global/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shopco.backend</groupId>
-        <artifactId>shopco-ecommerce</artifactId>
+        <artifactId>backend</artifactId>
         <version>1.0.0</version>
     </parent>
     <packaging>jar</packaging>
