--- a/Backend/payment-service/pom.xml
+++ b/Backend/payment-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.shopco.backend</groupId>
-		<artifactId>shopco-ecommerce</artifactId>
+		<artifactId>backend</artifactId>
 		<version>1.0.0</version>
 	</parent>
 	<packaging>jar</packaging>
@@ -77,12 +77,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.itgura.lms</groupId>
+			<groupId>com.shopco.backend</groupId>
 			<artifactId>lib-common</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.itgura.lms</groupId>
+			<groupId>com.shopco.backend</groupId>
 			<artifactId>lib-global</artifactId>
 			<version>0.0.1</version>
 		</dependency>
