--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.shopco.backend</groupId>
-    <artifactId>shopco-ecommerce</artifactId>
+    <artifactId>backend</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
 
